changes made to dwnld sync

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
@@ -10,31 +10,31 @@
                           <div class="col-sm-6 b-grey b-r">
                             <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
                             <div class="">
-                              <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
-                              <h5 class="m-t-0 text-center text-success">08:36 PM</h5>
+                              <h2 id="syncDateDwnld" class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
+                              <h5 id="syncTimeDwnld" class="m-t-0 text-center text-success">08:36 PM</h5>
                             </div>
                           </div>
 
                           <div class="col-sm-6 text-center">
-                            <button type="button" class="btn btn-success btn-sm btn-small btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="bold">View last 5 downloads</span></button>
+                            <button id="last5dwnlds" type="button" class="btn btn-success btn-sm btn-small btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="bold">View last 5 downloads</span></button>
                           </div>
                         </div>
                         <button id="syncNow" type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
 
-                        <div class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
+                        <div id="NetwrkCnctnDwnld" style="display:none" class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
                           <span class="fa fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
                         </div>
 
                       </div>
 
-                      <div class="col-sm-6">
+                      <div id="UploadView" class="col-sm-6">
                         <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-upload"></span></h3>
                         <div class="row">
                           <div class="col-sm-6 b-grey b-r">
                             <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
                             <div class="">
-                              <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
-                              <h5 class="m-t-0 text-center text-success">08:36 PM</h5>
+                              <h2 id="syncDateUpld" class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
+                              <h5 id="syncTimeUpld" class="m-t-0 text-center text-success">08:36 PM</h5>
                             </div>
                           </div>
 
@@ -45,7 +45,7 @@
                         </div>
                         <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
 
-                        <div class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
+                        <div id="NetwrkCnctnUpld" style="display:none" class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
                           <span class="fa fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
                         </div>
 
