Changed divisions entity

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
@@ -16,7 +16,7 @@
                           </div>
 
                           <div class="col-sm-6 text-center">
-                            <button type="button" class="btn btn-success btn-sm btn-small btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="bold">View last 5 downloads</span></button>
+                            <button id="last5downloads" type="button" class="btn btn-success btn-sm btn-small btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="bold">View last 5 downloads</span></button>
                           </div>
                         </div>
                         <button id="syncNow" type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
