login error msg fix, other bug fixes

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -102,7 +102,7 @@
 		ul{
 			li{
 				width: 96px;
-				padding-top: 8%;
+				//padding-top: 8%;
 				//height: 40px;
 				//font-weight: bold;
 				i{
@@ -129,7 +129,7 @@
 	.builder_actions{
 		background: @body-bg;
 		padding-bottom: 15px;
-		//margin-top: -48px;
+		margin-top: -48px;
 	}
 
 	.btn-cons2{
@@ -688,7 +688,7 @@
 #all-media-region{
 	.thumbnail{
 		cursor: pointer;
-		height: 92px;
+		//height: 92px;
 		background-color: @preview-grey;
 		&::after{
 			clear: both;
