--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -14,7 +14,7 @@
     <p>{{subject_string}}</p>
   </div>
 
-  <div class="meta rec">
+  <div class="meta rec area">
     {{chapter_count}}
   </div>
 
