--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-full.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-full.html
@@ -1,6 +1,6 @@
-<div class="col-lg-5">
+<div class="col-md-5">
 	<div id="textbook-description-region"></div>	
 </div>
-<div class="col-lg-7">
+<div class="col-md-7">
 	<div id="chapters-list-region" class="listBox"></div>
 </div>
