various fixes for content creator

--- a/HTML/assets/less/app.less
+++ b/HTML/assets/less/app.less
@@ -1,5 +1,8 @@
 /*Styles for App*/
 
+@import "variables.less";
+@import "mixins.less";
+
 body{
 	font-size: 16px;
 	//font-weight: bold;
@@ -12,4 +15,96 @@ select{
 
 button{
 	font-weight: bold;
+}
+
+/*App Highlight Color*/
+* {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
+    -webkit-focus-ring-color: @color-info !important; 
+    //outline: none !important;
+}
+
+/*Input Field Icon*/
+.input-with-icon i{
+	margin: 11px 2px 4px 10px;
+	color: darken(@dash-grey, 5%);
+}
+
+/*Login Switch*/
+.switch {
+  position: relative;
+  margin: 0 auto;
+  height: 25px;
+  width: 120px;
+  background: darken(@color-white, 5%);
+  border-radius: 3px;
+  // -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  // box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+}
+
+.switch-label {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 60px;
+  line-height: 24px;
+  font-size: 13px;
+  color: lighten(@dash-grey, 10%);
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.45);
+  cursor: pointer;
+}
+
+.switch-label:active {
+  //font-weight: bold;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
+}
+
+.switch-label-off {
+  padding-left: 2px;
+}
+
+.switch-label-on {
+  padding-right: 2px;
+}
+
+.switch-input {
+  display: none;
+}
+
+.switch-input:checked + .switch-label {
+  //font-weight: bold;
+  color: @color-white;
+  //text-shadow: 0 1px rgba(0, 0, 0, 0.25);
+  -webkit-transition: 0.15s ease-out;
+  -moz-transition: 0.15s ease-out;
+  -o-transition: 0.15s ease-out;
+  transition: 0.15s ease-out;
+}
+
+.switch-input:checked + .switch-label-on ~ .switch-selection {
+  /* Note: left: 50% doesn't transition in WebKit */
+  left: 60px;
+}
+
+.switch-selection {
+  display: block;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 25px;
+  background: @dash-grey;
+  border-radius: 3px;
+  // background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
+  // background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
+  // background-image: -o-linear-gradient(top, #9dd993, #65bd63);
+  // background-image: linear-gradient(to bottom, #9dd993, #65bd63);
+  // -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+  // box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: left 0.15s ease-out;
+  -moz-transition: left 0.15s ease-out;
+  -o-transition: left 0.15s ease-out;
+  transition: left 0.15s ease-out;
 }
