--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -67,7 +67,7 @@
                     </select>
                 </div>
                 <div class="col-sm-4">
-                    <label class="form-label">Author</label>{{post_author_name}}
+                    <label class="form-label">Author:</label>{{post_author_name}}
                 </div>
 
             </div>
