--- a/wp-content/themes/walnut/walnut/dev/css/app.css
+++ b/wp-content/themes/walnut/walnut/dev/css/app.css
@@ -1,4 +1,64 @@
 /*Styles for App*/
+/*Custom Colors*/
+/*Custom Mixins*/
+.ease {
+  -webkit-transition: all 0.3s ease-out;
+  /* Chrome 1-25, Safari 3.2+ */
+
+  -moz-transition: all 0.3s ease-out;
+  /* Firefox 4-15 */
+
+  -o-transition: all 0.3s ease-out;
+  /* Opera 10.50–12.00 */
+
+  transition: all 0.3s ease-out;
+  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
+}
+.fadein {
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+}
+.h-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+.block {
+  display: block;
+}
+.overlap-left-15 {
+  position: absolute;
+  left: -15px;
+  bottom: 40%;
+}
+.overlap-left-15 i {
+  color: #ffffff;
+}
+.overlap-right-15 {
+  position: absolute;
+  right: -15px;
+  bottom: 40%;
+}
+.overlap-right-15 i {
+  color: #ffffff;
+}
+.m-r-0 {
+  margin-right: 0;
+}
+.m-l-0 {
+  margin-left: 0;
+}
+.m-b-0 {
+  margin-bottom: 0;
+}
+.m-t-0 {
+  margin-top: 0;
+}
+.p-t-60 {
+  padding-top: 60px;
+}
 body {
   font-size: 16px;
 }
@@ -8,4 +68,74 @@ select {
 }
 button {
   font-weight: bold;
+}
+/*App Highlight Color*/
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+  -webkit-focus-ring-color: #0090d9 !important;
+}
+/*Input Field Icon*/
+.input-with-icon i {
+  margin: 11px 2px 4px 10px;
+  color: #9d9d9d;
+}
+/*Login Switch*/
+.switch {
+  position: relative;
+  margin: 0 auto;
+  height: 25px;
+  width: 120px;
+  background: #f2f2f2;
+  border-radius: 3px;
+}
+.switch-label {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 60px;
+  line-height: 24px;
+  font-size: 13px;
+  color: #c3c3c3;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.45);
+  cursor: pointer;
+}
+.switch-label:active {
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
+}
+.switch-label-off {
+  padding-left: 2px;
+}
+.switch-label-on {
+  padding-right: 2px;
+}
+.switch-input {
+  display: none;
+}
+.switch-input:checked + .switch-label {
+  color: #ffffff;
+  -webkit-transition: 0.15s ease-out;
+  -moz-transition: 0.15s ease-out;
+  -o-transition: 0.15s ease-out;
+  transition: 0.15s ease-out;
+}
+.switch-input:checked + .switch-label-on ~ .switch-selection {
+  /* Note: left: 50% doesn't transition in WebKit */
+
+  left: 60px;
+}
+.switch-selection {
+  display: block;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 25px;
+  background: #aaaaaa;
+  border-radius: 3px;
+  -webkit-transition: left 0.15s ease-out;
+  -moz-transition: left 0.15s ease-out;
+  -o-transition: left 0.15s ease-out;
+  transition: left 0.15s ease-out;
 }
