--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
@@ -9,7 +9,7 @@
 				<input id="check-case-sensitive" type="checkbox" name="check-ind-marks"> <label for="check-case-sensitive">Case Sensitive</label>
 			</div>
 			
-			<div class="form-group">
+			<div class="m-b-10">
 				Font
 				<select class="font" id="fib-font">
 				  <option value="Arial">
@@ -80,7 +80,12 @@
 				</select>
 			</div>
 
-			<div class="form-group">
+			<div class="m-b-10 inline colors">
+				Font Color
+				<input type="hidden" id="font-color" class="color-picker" value="{{color}}">
+			</div>
+
+			<div class="m-b-10">
         
 				<div class="textProp slider success">
 					Font Size 
@@ -88,6 +93,20 @@
 
 				</div>
 
+			</div>
+
+			<div class="m-b-10 style">
+				Blank Style
+				<select id="fib-style">
+					<option value="uline">Underline</option>
+					<option value="box">Box</option>
+					<option value="blank">Blank</option>		
+				</select>
+			</div>
+			
+			<div class="form-group inline colors">
+				Blank Background
+				<input type="hidden" id="bg-color" data-opacity="{{bg_opacity}}" class="color-picker" value={{bg_color}}>
 			</div>
 
 			<div class="checkbox check-success">
@@ -99,24 +118,7 @@
 				<input id="marks" type="text" value="{{marks}}" class="form-control" >
 			</div>
 
-			<div class="form-group style">
-				Style
-				<select id="fib-style">
-					<option value="uline">Underline</option>
-					<option value="box">Box</option>
-					<option value="blank">Blank</option>		
-				</select>
-			</div>
-
-			<div class="b-b b-grey m-b-10 m-t-10 p-b-5 bold">Colors</div>
-			<div class="form-group inline colors">
-				Font
-				<input type="hidden" id="font-color" class="color-picker" value="{{color}}">
-			</div>
-			<div class="form-group inline colors">
-				Background
-				<input type="hidden" id="bg-color" data-opacity="{{bg_opacity}}" class="color-picker" value={{bg_color}}>
-			</div>
+			
 		
 		</div>
 	</div>
