Fixed first time app sync and date completed on content pieces

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync3.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync3.html
@@ -5,7 +5,7 @@
                     <div class="row">
                       <div class="col-sm-6 b-grey b-r ">
                         <h3 class="semi-bold text-center">Sync Download <span class="fa fa-download"></span></h3>
-                        <div class="row">
+                        <div id="getFiles"  class="row">
                           <div class="col-sm-12 b-grey b-r m-b-10">
                             <h5 class="semi-bold text-center no-margin p-t-20">Get Files</h5>
                             <div class="">
