--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -6,55 +6,53 @@
     <div class="col-md-6">
       <div class="well">
         <div class="mainLogo"><img id="logo" src=""></div>
-        <!--<h2>Sign in to <span class="schoolName">School Name</span></h2>-->
-		  <form id="login-form" class="login-form" action="" method="post" novalidate="novalidate">
-  		 <div class="row">
-    		 <div class="form-group col-md-12">
-                <label class="form-label">Username</label>
+      <form id="login-form" class="login-form" action="" method="post" novalidate="novalidate">
+       <div class="row">
+         <div class="col-md-12">
                 <div class="controls">
-          				<div class="input-with-icon  right">                                       
-          					<i class=""></i>
-          					<input type="text" required name="txtusername" id="txtusername" class="form-control">                                 
-          				</div>
+                  <div class="input-with-icon">                                       
+                    <i class="fa fa-user"></i>
+                    <input type="text" required name="txtusername" id="txtusername" class="form-control" placeholder="Username">                                 
+                  </div>
                 </div>
           </div>
         </div>
-  		  <div class="row">
-            <div class="form-group col-md-12">
-              <label class="form-label">Password</label>
+        <div class="row">
+            <div class="col-md-12">
               <span class="help"></span>
               <div class="controls">
-        				<div class="input-with-icon  right">                                       
-        					<i class=""></i>
-        					<input type="password"  required name="txtpassword" id="txtpassword" class="form-control">                                 
-        				</div>
+                <div class="input-with-icon ">                                       
+                  <i class="fa fa-lock"></i>
+                  <input type="password"  required name="txtpassword" id="txtpassword" class="form-control" placeholder="Password">                                 
+                </div>
               </div>
           </div>
         </div>
-  		  <div class="row">
-            <div class="control-group  col-md-12">
-              <!--<div class="checkbox checkbox check-success"> 
-                <input type="checkbox" id="checkbox1" value="1">
-                <label for="checkbox1">Remember Me</label>
+        <div class="row m-t-10">
+            <div class="control-group  col-xs-6 b-r b-grey">
+
+              <h6 class=" m-b-5 text-center semi-bold">Login Type</h6>
+              <div class="switch">
+                <input id="online" class="switch-input" type="radio" name="optionyes" value="online">
+                <label for="online" class="switch-label switch-label-off">Online</label>
+                <input id="offline" class="switch-input" type="radio" name="optionyes" value="offline" checked="checked">
+                <label for="offline" class="switch-label switch-label-on">Offline</label>
+                <span class="switch-selection"></span>
               </div>
-              <a href="#">Trouble logging in?</a>-->
-              <p id="connectionStatus" class=" m-b-5 bold">Connection Status</p>
-              <p class=" m-b-5 bold">Login Type</p>
-              <div class="radio radio-success">
-                <input id="online" type="radio" name="optionyes" value="online">
-                <label for="online">Online</label>
-                <input id="offline" type="radio" name="optionyes" value="offline" checked="checked">
-                <label for="offline">Offline</label>
-              </div>
+              
+            </div>
+            <div class="control-group  col-xs-6">
+              <h6 class=" m-b-5 text-center semi-bold">Internet Connection</h6>
+              <h5 id="connectionStatus" class="text-center bold text-success m-t-10">Available</h5>
               
             </div>
         </div>
         <div class="row">
-          <div class="col-md-12">
-            <button id="login-submit" class="btn btn-primary btn-cons pull-right" type="submit">Login </button>
+          <div class="col-md-12 m-t-10">
+            <button id="login-submit" class="btn btn-primary btn-cons btn-block" type="submit"><span class="bold">Login</span> </button>
           </div>
         </div>
-		  </form>
+      </form>
     </div>
       <div class="text-center"><small>Powered by:</small></div>
       <div class="smallLogo"></div>
