--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync3.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync3.html
@@ -9,7 +9,7 @@
                           <div class="col-sm-12 b-grey b-r m-b-10">
                             <h5 class="semi-bold text-center no-margin p-t-20">Get Files</h5>
                             <div class="">
-                              <h5 class="m-t-5 semi-bold text-center text-success">Last Download: 13/05/2014 @ 08:36 PM</h5>
+                              <h5 id="dwnldDateTime" class="m-t-5 semi-bold text-center text-success">Last Download: 13/05/2014 @ 08:36 PM</h5>
                               <button id="DownloadNow" type="button" class="btn btn-success btn-sm btn-small h-center block"><span class="bold">Download Now</span></button>
                               <div class="progress progress-striped active progress-small h-center m-t-5">
                                 <div id="progressBarDwnld" data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div>
