--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -199,3 +199,13 @@ textarea.error, .select2-choice.error {
 	background-repeat: no-repeat;
 	background-position: left center;
 }
+
+.select2-results{
+	margin: 4px 4px 4px 0;
+}
+
+@media (max-width:1024px){
+	#main-menu-toggle-wrapper, #portrait-chat-toggler{
+		display: block !important;
+	}
+}
