--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
@@ -6,7 +6,7 @@
 		<div class="docket-body">
 
             <div class="form-group">
-                Number of Blanks :
+                Number of Blanks 
                 <select class="no-of-blanks" id="no-of-blanks">
                     <option value="0" disabled>
                         0
