--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -14,10 +14,12 @@
     <p>{{subject_string}}</p>
   </div>
 
-  <div class="meta rec area">
+  <div class="meta area">
     {{chapter_count}}
   </div>
 
   <div class="meta area">
     <p>{{count}}</p>
-  </div
+  </div>
+
+  <div class="clearfix"></div>
