--- a/HTML/assets/less/app.less
+++ b/HTML/assets/less/app.less
@@ -76,6 +76,7 @@ button{
   //font-weight: bold;
   color: @color-white;
   //text-shadow: 0 1px rgba(0, 0, 0, 0.25);
+  -webkit-transform: translate3d(0px,0px,0px);
   -webkit-transition: 0.15s ease-out;
   -moz-transition: 0.15s ease-out;
   -o-transition: 0.15s ease-out;
@@ -95,8 +96,9 @@ button{
   left: 0;
   width: 60px;
   height: 25px;
-  background: @dash-grey;
+  background: @color-info;
   border-radius: 3px;
+  -webkit-transform: translate3d(0px,0px,0px);
   // background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
   // background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
   // background-image: -o-linear-gradient(top, #9dd993, #65bd63);
