--- a/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media-manager/templates/outer.html
@@ -1,6 +1,6 @@
 
 <ul class="nav nav-tabs">
-  <li class="active all-media-tab"><a href="#all-media-region" data-toggle="tab">All Media</a></li>
+  <li class="active all-media-tab"><a href="#all-media-region" data-toggle="tab">Gallery</a></li>
   <li class="upload-tab"><a href="#upload-region" data-toggle="tab">Upload</a></li>
 
   <!--li: a(href="#gallery-region" data-toggle="tab") Gallery-->
@@ -11,7 +11,7 @@
     <div id="grid-region" class="col-md-9"></div>
     <div id="edit-media-region" class="col-md-3">
       <div class="pick-image p-t-50">
-        <h4><span class="glyphicon glyphicon-hand-left"></span> Select an image</h4>
+        <h4><span class="glyphicon glyphicon-hand-left"></span>Select an Image from the library</h4>
       </div>
     </div>
   </div>
