--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync3.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync3.html
@@ -35,15 +35,31 @@
 
                       <div id="syncUpld3" class="col-sm-6">
                         <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-upload"></span></h3>
+
                         <div class="row">
-                            <div class="m-t-55">
-                              <h5 class="semi-bold text-center no-margin p-t-20 ">Upload Progress</h5>
-                              <div class="progress progress-striped active progress-small h-center m-t-10">
+                          <div class="col-sm-12  m-b-10">
+                            <h5 class="semi-bold text-center p-t-20">Generate File</h5>
+                            <div class="">
+                              <button type="button" class="btn btn-success h-center block"><span class="bold">Generate Now</span></button>
+                              <img src="images/loader.gif" class="h-center block m-t-5" height="20">
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-sm-12  m-b-10">
+                            <h5 class="semi-bold text-center  p-t-20">Upload File</h5>
+                            <div class="">
+                              <button type="button" class="btn disabled h-center block"><span class="bold">Upload Now</span></button>
+                              <div class="progress progress-striped active progress-small h-center m-t-5">
                                 <div id="progressBarUpld" data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div>
                               </div>
                             </div>
                           </div>
                         </div>
+
+                        </div>
+
                       </div>
                     </div>
 
