--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
@@ -42,7 +42,7 @@
                             <h5 id="totalRecordsToBeSynced" class="m-t-10 bold text-center text-error">23 records to be synced</h5>
                           </div>
                         </div>
-                        <button id="downSync" type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
+                        <button id="upSync1" type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
 
                         <div id="networkConnectionUpload" style="display:none" class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
                           <span class="fa fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
