media from ftp plugin to add videos from folder to media library content creator - choose and insert videos

--- a/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/media/grid/templates/media.html
@@ -8,3 +8,13 @@
         </div>
     </a>
 {{/imagePreview}}
+{{#videoPreview}}
+<a class="thumbnail">
+    <div class="imgthumb">{{title_excerpt}}</div>
+    <div class="imaTitle"><span>{{title}}</span></div>
+    <div class="ticker">
+        <span class="glyphicon glyphicon-ok"></span>
+        <span class="glyphicon glyphicon-minus"></span>
+    </div>
+</a>
+{{/videoPreview}}
