--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -67,6 +67,7 @@ h3.time{
 	.ln-letters{
 		display: table;
 		margin: auto;
+		margin-top: 10px;
 		a{
 			padding: 5px 14px;
 			font-size: 1.5em;
