--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -209,3 +209,71 @@ textarea.error, .select2-choice.error {
 		display: block !important;
 	}
 }
+
+#breadcrumb-region{
+	display: none;
+}
+
+/*App Styles*/
+@media(max-width:1024px){
+	body{
+		font-size: 16px;
+		//font-weight: bold;
+	}
+
+	select{
+		font-weight: bold;
+		font-size: 15px;
+	}
+
+	button{
+		font-weight: bold;
+	}
+
+	.page-sidebar {
+	    .page-sidebar-wrapper {
+	        & > ul {
+	            & > li {
+	                & > a {
+	                    font-size: 16px;
+	                }
+	                & > ul.sub-menu {
+	                    & > li {
+	                        & > a {
+	                            font-size: 15px;
+	                        }
+	                    }
+	                }
+	            }
+	        }
+	    }
+	}
+
+	select{
+		display: inline-block;
+		position: relative;
+		line-height: 1;
+		width: 200px;
+		padding: 10px;
+		background: @preview-grey;
+		border: 1px solid @body-bg;
+		box-shadow: inset 0 -1px 2px rgba(0,0,0,.05);
+		border-radius: 3px;
+		color: @3-grey;
+		font-size: 16px;
+		font-weight: 700;
+		text-align: left;
+		text-transform: none;
+		outline: 0;
+		outline-offset: -2px;
+		cursor: default;
+		&:after, &:before{
+			content: "";
+			position: absolute;
+			right: 30px;
+			top: 10px;
+			bottom: 10px;
+			border-left: 1px solid #e5e5e5;
+		}
+	}
+}
