--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -8,11 +8,11 @@
     </div>
 </div>
 
-<div class="meta rec">
+<div class="meta">
     <p>{{subjects}}</p>
 </div>
 
-<div class="meta modules">
+<div class="meta modules rec">
     <p>0 of {{modules_count}}</p>
 </div>
 
