--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1671,50 +1671,76 @@ textarea.error,
 #breadcrumb-region {
   display: none;
 }
-/*App Styles*/
-@media (max-width: 1024px) {
-  body {
-    font-size: 16px;
-  }
-  select {
-    font-weight: bold;
-    font-size: 15px;
-  }
-  button {
-    font-weight: bold;
-  }
-  .page-sidebar .page-sidebar-wrapper > ul > li > a {
-    font-size: 16px;
-  }
-  .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a {
-    font-size: 15px;
-  }
-  select {
-    display: inline-block;
-    position: relative;
-    line-height: 1;
-    width: 200px;
-    padding: 10px;
-    background: #f3f3f3;
-    border: 1px solid #e5e9ec;
-    box-shadow: inset 0 -1px 2px rgba(0, 0, 0, 0.05);
-    border-radius: 3px;
-    color: #333333;
-    font-size: 16px;
-    font-weight: 700;
-    text-align: left;
-    text-transform: none;
-    outline: 0;
-    outline-offset: -2px;
-    cursor: default;
-  }
-  select:after,
-  select:before {
-    content: "";
-    position: absolute;
-    right: 30px;
-    top: 10px;
-    bottom: 10px;
-    border-left: 1px solid #e5e5e5;
-  }
+body {
+  font-size: 18px;
+  font-weight: bold;
+}
+select {
+  font-weight: bold;
+  font-size: 15px;
+}
+button {
+  font-weight: bold;
+}
+label,
+input,
+button,
+select,
+textarea {
+  font-size: 16px;
+}
+.btn {
+  padding: 10px 30px;
+  padding-top: 10px;
+  font-weight: bold;
+}
+.form-control {
+  height: 45px;
+  font-weight: bold;
+  font-size: 16px;
+}
+.form-control .select2-choice {
+  padding: 8px 9px;
+  height: 45px;
+}
+.form-control .select2-choice .select2-arrow b:before {
+  top: 6px;
+}
+.page-sidebar .page-sidebar-wrapper > ul > li > a {
+  font-size: 15px;
+}
+.page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a {
+  font-size: 15px;
+}
+select {
+  display: inline-block;
+  position: relative;
+  line-height: 1;
+  width: 100%;
+  min-height: 45px;
+  padding: 10px;
+  background: #f3f3f3;
+  border: 1px solid #e5e9ec;
+  box-shadow: inset 0 -1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 3px;
+  color: #333333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: left;
+  text-transform: none;
+  outline: 0;
+  outline-offset: -2px;
+  cursor: default;
+}
+select:after,
+select:before {
+  content: "";
+  position: absolute;
+  right: 30px;
+  top: 10px;
+  bottom: 10px;
+  border-left: 1px solid #e5e5e5;
+}
+#main-content-region > .row {
+  margin: 0;
 }
