training_logs table & usages removed scheduled status of group added to question response table as a record

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display-item.html
@@ -18,6 +18,9 @@
                 <div>
                     <span class="bold">Correct Answer:</span> {{correctAnswer}}
                 </div>
+                <div>
+                    <span class="bold">Taken By:</span> {{teacherName}}
+                </div>
                 {{/responseStatus}}
             </div>
             <div class="clearfix"></div>
