question saved as completed only on clicking "Next Question" else it is saved as paused total elapsed time issue sorted right drawer added for logout on smaller screens

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/right/templates/right.html
@@ -16,5 +16,15 @@
 		 
 	</ul>
 	<!-- END HEADER NAV BUTTONS -->
-</div>
 <!-- END HEADER RIGHT SIDE SECTION -->
+
+<ul class="nav pull-right notifcation-center">
+
+    <!-- BEGIN MOBILE CHAT TOGGLER -->
+    <li style="display:none" id="portrait-chat-toggler" class="dropdown">
+        <a class="chat-menu-toggle" href="#sidr">
+            <div class="iconset top-chat-white"></div>
+        </a>
+    </li>
+    <!-- END MOBILE CHAT TOGGLER -->
+</ul>
