--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -18,15 +18,15 @@
 			</a>
 			<!-- END LOGO --> 
 			<!-- BEGIN LOGO NAV BUTTONS -->
-			<ul class="nav pull-right notifcation-center">	
-				
+			<ul class="nav pull-right notifcation-center">
+
 				<!-- BEGIN MOBILE CHAT TOGGLER -->
 				<li style="display:none" id="portrait-chat-toggler" class="dropdown">
-					<a class="chat-menu-toggle" href="#sidr">
+					<a class="chat-menu-toggle right-menu" href="#sidr">
 						<div class="iconset top-chat-white"></div>
 					</a>
 				</li>
-				<!-- END MOBILE CHAT TOGGLER -->				        
+				<!-- END MOBILE CHAT TOGGLER -->
 			</ul>
 			<!-- END LOGO NAV BUTTONS -->
 		</div>
@@ -40,4 +40,10 @@
 		<!-- END CONTENT HEADER --> 
 	</div>
 	<!-- END TOP NAVIGATION BAR --> 
+</div>
+
+
+<div id="walnutProfile">
+    <div id="app_username" class="user">User Name</div>
+    <a id="logout" class="appLogout" href="javascript://" ><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a>
 </div>
