mobile menu color changes, collection style changes

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -299,8 +299,29 @@ select{
 	}
 }
 
-#main-content-region{
+#main-content-region, #content-display-region{
 	&>.row{
 		margin: 0;
+	}
+}
+
+.small-text {
+	font-size: 15px !important;
+}
+
+@media (max-width:1024px){
+	.page-content .content{
+		padding: 0;
+		padding-top: 60px;
+	}
+
+	.header{
+		.notifcation-center{
+			background: transparent;
+		}
+	}
+
+	.page-sidebar{
+		background: @color-black !important;
 	}
 }
