--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1239,7 +1239,7 @@ p.mcq-option-text {
 }
 .qstnStatus {
   color: #0aa699;
-  font-size: 20px;
+  font-size: 25px;
 }
 .qstnStatus i {
   font-size: 22px;
@@ -1517,7 +1517,7 @@ h3.time {
 }
 #myCanvas-miki .cbp_tmtimeline > li .qstnStatus {
   position: absolute;
-  right: -140px;
+  right: -170px;
   top: 12px;
 }
 .progress-bar {
@@ -1741,6 +1741,22 @@ select:before {
   bottom: 10px;
   border-left: 1px solid #e5e5e5;
 }
-#main-content-region > .row {
+#main-content-region > .row,
+#content-display-region > .row {
   margin: 0;
+}
+.small-text {
+  font-size: 15px !important;
+}
+@media (max-width: 1024px) {
+  .page-content .content {
+    padding: 0;
+    padding-top: 60px;
+  }
+  .header .notifcation-center {
+    background: transparent;
+  }
+  .page-sidebar {
+    background: #1b1e24 !important;
+  }
 }
