--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -85,6 +85,13 @@
                     <span class="lastMod muted">{{last_modified_by}}</span>
                 </div>
             </div>
+            {{#studentQuestion}}
+                <div class="row">
+                    <div class="col-sm-6">
+                        this is a student question
+                    </div>
+                </div>
+            {{/studentQuestion}}
         </div>
     </div>
 </form>
