--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1582,6 +1582,7 @@ body {
 .page-sidebar .page-sidebar-wrapper > ul > li > a .arrow,
 .page-sidebar .page-sidebar-wrapper > ul > li > a .arrow.open:before {
   color: #ffffff !important;
+  font-size: 15px;
 }
 .page-sidebar .page-sidebar-wrapper > ul > li.open > a {
   background-color: #0aa699 !important;
@@ -1592,8 +1593,28 @@ body {
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu {
   background-color: #0aa699;
 }
+.page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a {
+  font-size: 15px;
+}
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a:hover {
   background-color: #098e83 !important;
+}
+@media (max-width: 1024px) {
+  .page-sidebar {
+    background: #1b1e24 !important;
+  }
+  .page-sidebar .page-sidebar-wrapper > ul > li.open > a {
+    background-color: #595e6c !important;
+  }
+  .page-sidebar .page-sidebar-wrapper > ul > li:hover > a {
+    background-color: #595e6c;
+  }
+  .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu {
+    background-color: #595e6c;
+  }
+  .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a:hover {
+    background-color: #7d8495 !important;
+  }
 }
 #walnutProfile .user {
   font-size: 20px;
@@ -1706,12 +1727,6 @@ textarea {
 .form-control .select2-choice .select2-arrow b:before {
   top: 6px;
 }
-.page-sidebar .page-sidebar-wrapper > ul > li > a {
-  font-size: 15px;
-}
-.page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a {
-  font-size: 15px;
-}
 select {
   display: inline-block;
   position: relative;
@@ -1755,8 +1770,5 @@ select:before {
   }
   .header .notifcation-center {
     background: transparent;
-  }
-  .page-sidebar {
-    background: #1b1e24 !important;
   }
 }
